[FIX/#144] 리뷰 기반 클러스터 측정 안전성 보완